syntax = "proto3";

package ___PROTO_NAME___;

import "koinos/options.proto";

message mint_configuration {
   bool only_by_collection_owner = 1;

   // when only_by_collection_owner is false
   bytes address_pay = 2 [(koinos.btype) = ADDRESS];
   uint64 price = 3 [jstype = JS_STRING];
}

message mint_args {
   bytes to = 1 [(koinos.btype) = ADDRESS];
   uint64 number_tokens_to_mint = 2 [jstype = JS_STRING];
}
